--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
@@ -24,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "data": "json-server --watch ./src/database/db.json --port 3001"
+    "data": "json-server --watch ./src/database/db.json --port 3001",
+    "dev": "concurrently \"yarn data\" \"yarn start\""
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +52,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
     "json-server": "^0.17.2",
     "postcss": "^8.4.21",
     "react-icons": "^4.8.0",
