--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/chart.js": "^2.9.37",
     "@types/lodash": "^4.14.191",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
